[package]
name = "opilio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
html5ever = "0.25.1"
markup5ever_rcdom = "0.1.0"
hyper ={version="0.14.16", features=["full"]}
tokio = "1.15.0"

[dependencies.sdl2]
features = ["image", "gfx", "ttf"]
version = "0.35.1"